modernizer for presto-product-tests